--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "jquery": "^3.5.1",
     "jsdom": "^16.4.0",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "open": "^7.2.1"
   }
 }
